lib/grammar.js
module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "NODES": parse_NODES,
        "NODE": parse_NODE,
        "ECONodes": parse_ECONodes,
        "ECONode": parse_ECONode,
        "ECOLiteral": parse_ECOLiteral,
        "ECOLiteralLeft": parse_ECOLiteralLeft,
        "ECOLiteralRight": parse_ECOLiteralRight,
        "ECOEND": parse_ECOEND,
        "ECOExpression": parse_ECOExpression,
        "ECOEscapedContent": parse_ECOEscapedContent,
        "ECOContent": parse_ECOContent,
        "ECOTagChar": parse_ECOTagChar,
        "ECOTagChars": parse_ECOTagChars,
        "ECOIndent": parse_ECOIndent,
        "ECODirective": parse_ECODirective,
        "ECOOpen": parse_ECOOpen,
        "ECOClose": parse_ECOClose,
        "HTMLNodes": parse_HTMLNodes,
        "HTMLNode": parse_HTMLNode,
        "HTMLAttribute": parse_HTMLAttribute,
        "HTMLCDATA": parse_HTMLCDATA,
        "HTMLCDATAChar": parse_HTMLCDATAChar,
        "HTMLCDATAChars": parse_HTMLCDATAChars,
        "HTMLComment": parse_HTMLComment,
        "HTMLCommentSTChar": parse_HTMLCommentSTChar,
        "HTMLDoctype": parse_HTMLDoctype,
        "HTMLElement": parse_HTMLElement,
        "HTMLElementInline": parse_HTMLElementInline,
        "HTMLElementOpen": parse_HTMLElementOpen,
        "HTMLElementOpenDelim": parse_HTMLElementOpenDelim,
        "HTMLElementClose": parse_HTMLElementClose,
        "HTMLElementCloseDelim": parse_HTMLElementCloseDelim,
        "HTMLScript": parse_HTMLScript,
        "HTMLScriptContentChar": parse_HTMLScriptContentChar,
        "HTMLScriptContentChars": parse_HTMLScriptContentChars,
        "HTMLStyle": parse_HTMLStyle,
        "HTMLText": parse_HTMLText,
        "HTMLContentChar": parse_HTMLContentChar,
        "HTMLContentChars": parse_HTMLContentChars,
        "HTMLTag": parse_HTMLTag,
        "HTMLTagChars": parse_HTMLTagChars,
        "HTMLNodeChar": parse_HTMLNodeChar,
        "HTMLNodeChars": parse_HTMLNodeChars,
        "HTMLValue": parse_HTMLValue,
        "HTMLValueDoubleQuoted": parse_HTMLValueDoubleQuoted,
        "HTMLValueDoubleQuotedChar": parse_HTMLValueDoubleQuotedChar,
        "HTMLValueQuoted": parse_HTMLValueQuoted,
        "HTMLValueQuotedChar": parse_HTMLValueQuotedChar,
        "HTMLValueNoQuoted": parse_HTMLValueNoQuoted,
        "HTMLValueNoQuotedChar": parse_HTMLValueNoQuotedChar,
        "_": parse__,
        "whitespace": parse_whitespace,
        "hexDigit": parse_hexDigit,
        "char": parse_char
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "NODES";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_NODES() {
        var result0, result1, result2;
        var pos0, pos1;
        
        result0 = [];
        pos0 = pos;
        pos1 = pos;
        result1 = parse_NODE();
        if (result1 !== null) {
          result2 = parse__();
          if (result2 !== null) {
            result1 = [result1, result2];
          } else {
            result1 = null;
            pos = pos1;
          }
        } else {
          result1 = null;
          pos = pos1;
        }
        if (result1 !== null) {
          result1 = (function(offset, c) { return c; })(pos0, result1[0]);
        }
        if (result1 === null) {
          pos = pos0;
        }
        while (result1 !== null) {
          result0.push(result1);
          pos0 = pos;
          pos1 = pos;
          result1 = parse_NODE();
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos1;
            }
          } else {
            result1 = null;
            pos = pos1;
          }
          if (result1 !== null) {
            result1 = (function(offset, c) { return c; })(pos0, result1[0]);
          }
          if (result1 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_NODE() {
        var result0;
        
        result0 = parse_ECONode();
        if (result0 === null) {
          result0 = parse_HTMLNode();
        }
        return result0;
      }
      
      function parse_ECONodes() {
        var result0, result1, result2;
        var pos0, pos1;
        
        result0 = [];
        pos0 = pos;
        pos1 = pos;
        result1 = parse_ECONode();
        if (result1 !== null) {
          result2 = parse__();
          if (result2 !== null) {
            result1 = [result1, result2];
          } else {
            result1 = null;
            pos = pos1;
          }
        } else {
          result1 = null;
          pos = pos1;
        }
        if (result1 !== null) {
          result1 = (function(offset, c) { return c; })(pos0, result1[0]);
        }
        if (result1 === null) {
          pos = pos0;
        }
        while (result1 !== null) {
          result0.push(result1);
          pos0 = pos;
          pos1 = pos;
          result1 = parse_ECONode();
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos1;
            }
          } else {
            result1 = null;
            pos = pos1;
          }
          if (result1 !== null) {
            result1 = (function(offset, c) { return c; })(pos0, result1[0]);
          }
          if (result1 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_ECONode() {
        var result0;
        
        result0 = parse_ECOLiteral();
        if (result0 === null) {
          result0 = parse_ECOEND();
          if (result0 === null) {
            result0 = parse_ECOEscapedContent();
            if (result0 === null) {
              result0 = parse_ECOContent();
              if (result0 === null) {
                result0 = parse_ECOExpression();
              }
            }
          }
        }
        return result0;
      }
      
      function parse_ECOLiteral() {
        var result0;
        
        result0 = parse_ECOLiteralLeft();
        if (result0 === null) {
          result0 = parse_ECOLiteralRight();
        }
        return result0;
      }
      
      function parse_ECOLiteralLeft() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 3) === "<%%") {
          result0 = "<%%";
          pos += 3;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"<%%\"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset) { return { type: 'eco', tag: 'leftLiteral' } })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOLiteralRight() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.substr(pos, 3) === "%%>") {
          result0 = "%%>";
          pos += 3;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"%%>\"");
          }
        }
        if (result0 !== null) {
          result0 = (function(offset) { return { type: 'eco', tag: 'rightLiteral' } })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOEND() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ECOOpen();
        if (result0 !== null) {
          result1 = parse__();
          if (result1 !== null) {
            if (input.substr(pos, 3) === "end") {
              result2 = "end";
              pos += 3;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"end\"");
              }
            }
            if (result2 !== null) {
              result3 = parse__();
              if (result3 !== null) {
                result4 = parse_ECOClose();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset) { return { type: 'eco', tag: 'end' } })(pos0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOExpression() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ECOOpen();
        if (result0 !== null) {
          result1 = parse__();
          if (result1 !== null) {
            result2 = parse_ECOTagChars();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_ECOIndent();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_ECODirective();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse__();
                  if (result5 !== null) {
                    result6 = parse_ECOClose();
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, cont, indent, directive) { return { type: 'eco', tag: 'expression', content: cont, indent: indent, directive: directive }})(pos0, result0[2], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOEscapedContent() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ECOOpen();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 61) {
            result1 = "=";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"=\"");
            }
          }
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result3 = parse_ECOTagChars();
              if (result3 !== null) {
                result4 = parse_ECOIndent();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse_ECODirective();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse__();
                    if (result6 !== null) {
                      result7 = parse_ECOClose();
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, cont, indent, directive) { return { type: 'eco', tag: 'escapedContent', content: cont, indent: indent, directive: directive }})(pos0, result0[3], result0[4], result0[5]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOContent() {
        var result0, result1, result2, result3, result4, result5, result6, result7;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ECOOpen();
        if (result0 !== null) {
          if (input.charCodeAt(pos) === 45) {
            result1 = "-";
            pos++;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"-\"");
            }
          }
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result3 = parse_ECOTagChars();
              if (result3 !== null) {
                result4 = parse_ECOIndent();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse_ECODirective();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse__();
                    if (result6 !== null) {
                      result7 = parse_ECOClose();
                      if (result7 !== null) {
                        result0 = [result0, result1, result2, result3, result4, result5, result6, result7];
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, cont, indent, directive) { return { type: 'eco', tag: 'content', content: cont, indent: indent, directive: directive }})(pos0, result0[3], result0[4], result0[5]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOTagChar() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2, pos3;
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        reportFailures++;
        pos3 = pos;
        if (input.charCodeAt(pos) === 58) {
          result0 = ":";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\":\"");
          }
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          if (input.substr(pos, 2) === "->") {
            result1 = "->";
            pos += 2;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"->\"");
            }
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            if (input.substr(pos, 2) === "=>") {
              result2 = "=>";
              pos += 2;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"=>\"");
              }
            }
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse__();
              if (result3 !== null) {
                if (input.substr(pos, 2) === "%>") {
                  result4 = "%>";
                  pos += 2;
                } else {
                  result4 = null;
                  if (reportFailures === 0) {
                    matchFailed("\"%>\"");
                  }
                }
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos3;
                }
              } else {
                result0 = null;
                pos = pos3;
              }
            } else {
              result0 = null;
              pos = pos3;
            }
          } else {
            result0 = null;
            pos = pos3;
          }
        } else {
          result0 = null;
          pos = pos3;
        }
        reportFailures--;
        if (result0 === null) {
          result0 = "";
        } else {
          result0 = null;
          pos = pos2;
        }
        if (result0 !== null) {
          result1 = parse_char();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, c) { return c; })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOTagChars() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result1 = parse_ECOTagChar();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_ECOTagChar();
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, c) { return c.join(''); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECOIndent() {
        var result0;
        var pos0;
        
        pos0 = pos;
        if (input.charCodeAt(pos) === 58) {
          result0 = ":";
          pos++;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\":\"");
          }
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result0 = (function(offset, indent) { return !!indent })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_ECODirective() {
        var result0;
        
        if (input.substr(pos, 2) === "=>") {
          result0 = "=>";
          pos += 2;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"=>\"");
          }
        }
        if (result0 === null) {
          if (input.substr(pos, 2) === "->") {
            result0 = "->";
            pos += 2;
          } else {
            result0 = null;
            if (reportFailures === 0) {
              matchFailed("\"->\"");
            }
          }
        }
        return result0;
      }
      
      function parse_ECOOpen() {
        var result0;
        
        if (input.substr(pos, 2) === "<%") {
          result0 = "<%";
          pos += 2;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"<%\"");
          }
        }
        return result0;
      }
      
      function parse_ECOClose() {
        var result0;
        
        if (input.substr(pos, 2) === "%>") {
          result0 = "%>";
          pos += 2;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"%>\"");
          }
        }
        return result0;
      }
      
      function parse_HTMLNodes() {
        var result0, result1, result2;
        var pos0, pos1;
        
        result0 = [];
        pos0 = pos;
        pos1 = pos;
        result1 = parse_HTMLNode();
        if (result1 !== null) {
          result2 = parse__();
          if (result2 !== null) {
            result1 = [result1, result2];
          } else {
            result1 = null;
            pos = pos1;
          }
        } else {
          result1 = null;
          pos = pos1;
        }
        if (result1 !== null) {
          result1 = (function(offset, c) { return c; })(pos0, result1[0]);
        }
        if (result1 === null) {
          pos = pos0;
        }
        while (result1 !== null) {
          result0.push(result1);
          pos0 = pos;
          pos1 = pos;
          result1 = parse_HTMLNode();
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos1;
            }
          } else {
            result1 = null;
            pos = pos1;
          }
          if (result1 !== null) {
            result1 = (function(offset, c) { return c; })(pos0, result1[0]);
          }
          if (result1 === null) {
            pos = pos0;
          }
        }
        return result0;
      }
      
      function parse_HTMLNode() {
        var result0;
        
        result0 = parse_HTMLDoctype();
        if (result0 === null) {
          result0 = parse_HTMLCDATA();
          if (result0 === null) {
            result0 = parse_HTMLComment();
            if (result0 === null) {
              result0 = parse_HTMLScript();
              if (result0 === null) {
                result0 = parse_HTMLStyle();
                if (result0 === null) {
                  result0 = parse_HTMLElement();
                  if (result0 === null) {
                    result0 = parse_HTMLText();
                  }
                }
              }
            }
          }
        }
        return result0;
      }
      
      function parse_HTMLAttribute() {
        var result0, result1, result2, result3, result4, result5;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = pos;
        pos1 = pos;
        result0 = parse_HTMLTag();
        if (result0 !== null) {
          result1 = parse__();
          if (result1 !== null) {
            if (input.charCodeAt(pos) === 61) {
              result2 = "=";
              pos++;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"=\"");
              }
            }
            if (result2 !== null) {
              result3 = parse__();
              if (result3 !== null) {
                result4 = parse_HTMLValue();
                if (result4 !== null) {
                  result5 = parse__();
                  if (result5 !== null) {
                    result0 = [result0, result1, result2, result3, result4, result5];
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, t, v) { return { name: t, value: v } })(pos0, result0[0], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        if (result0 === null) {
          pos0 = pos;
          pos1 = pos;
          result0 = parse_HTMLTag();
          if (result0 !== null) {
            result1 = parse_HTMLValueDoubleQuoted();
            if (result1 === null) {
              result1 = parse_HTMLValueQuoted();
            }
            if (result1 !== null) {
              result0 = [result0, result1];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
          if (result0 !== null) {
            result0 = (function(offset, t, v) { return { name: t, value: v } })(pos0, result0[0], result0[1]);
          }
          if (result0 === null) {
            pos = pos0;
          }
          if (result0 === null) {
            pos0 = pos;
            pos1 = pos;
            result0 = parse_HTMLTag();
            if (result0 !== null) {
              result1 = parse__();
              if (result1 !== null) {
                result0 = [result0, result1];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
            if (result0 !== null) {
              result0 = (function(offset, t) { return { name: t }})(pos0, result0[0]);
            }
            if (result0 === null) {
              pos = pos0;
            }
            if (result0 === null) {
              result0 = parse_ECONode();
            }
          }
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("element attribute");
        }
        return result0;
      }
      
      function parse_HTMLCDATA() {
        var result0, result1, result2;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = pos;
        pos1 = pos;
        if (input.substr(pos, 9) === "<![CDATA[") {
          result0 = "<![CDATA[";
          pos += 9;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"<![CDATA[\"");
          }
        }
        if (result0 !== null) {
          result1 = parse_HTMLCDATAChars();
          if (result1 !== null) {
            if (input.substr(pos, 3) === "]]>") {
              result2 = "]]>";
              pos += 3;
            } else {
              result2 = null;
              if (reportFailures === 0) {
                matchFailed("\"]]>\"");
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, cont) { return { type: 'cdata', 'content': cont  } })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        reportFailures--;
        if (reportFailures === 0 && result0 === null) {
          matchFailed("CDATA section");
        }
        return result0;
      }
      
      function parse_HTMLCDATAChar() {
        var result0, result1;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        pos2 = pos;
        reportFailures++;
        if (input.substr(pos, 3) === "]]>") {
          result0 = "]]>";
          pos += 3;
        } else {
          result0 = null;
          if (reportFailures === 0) {
            matchFailed("\"]]>\"");
          }
        }
        reportFailures--;
        if (result0 === null) {
          result0 = "";
        } else {
          result0 = null;
          pos = pos2;
        }
        if (result0 !== null) {
          result1 = parse_char();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, c) { return c; })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_HTMLCDATAChars() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result1 = parse_HTMLCDATAChar();
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_HTMLCDATAChar();
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, c) { return c.join(''); })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_HTMLComment() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        reportFailures++;
        pos0 = pos;
        pos1 = pos;
        result0 = parse_HTMLElementOpenDelim();
        if (result0 !== null) {
          if (input.substr(pos, 3) === "!--") {
            result1 = "!--";
            pos += 3;
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"!--\"");
            }
          }
          if (result1 !== null) {
            result2 = parse__();
            if (result2 !== null) {
              result3 = [];
              result4 = parse_HTMLCommentSTChar();
              while (result4 !== null) {
                result3.push(result4);
                result4 = parse_HTMLCommentSTChar();
              }
              if (result3 !== null) {
                result4 = parse__();
                if (result4 !== null) {
